v3/gramatica_v3Parser.py
# Generated from gramatica_v3.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class gramatica_v3Parser ( Parser ):

    grammarFileName = "gramatica_v3.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'program'", "'{'", "'}'", "'if'", "'else'", 
                     "'while'", "'for'", "'return'", "'int'", "'float'", 
                     "'string'", "'bool'", "'void'", "'true'", "'false'", 
                     "'print'", "','", "'('", "')'", "';'", "'='", "'+'", 
                     "'-'", "'/'", "'*'", "'>='", "'<='", "'>'", "'<'", 
                     "'=='", "'<>'", "'!='", "'&&'", "'||'", "'!'", "'['", 
                     "']'", "'%'" ]

    symbolicNames = [ "<INVALID>", "INI", "INILLAVE", "FIN", "IF", "ELSE", 
                      "WHILE", "FOR", "RETURN", "INT", "FLOAT", "STRING", 
                      "BOOL", "VOID", "TRUE", "FALSE", "PRINT", "COMMA", 
                      "PARENI", "PAREND", "SEMI", "ASSIGN", "SUM", "REST", 
                      "DIV", "MUL", "MAYORIGUAL", "MENORIGUAL", "MAYOR", 
                      "MENOR", "IGUAL", "NOIGUAL", "DIFF", "AND", "OR", 
                      "NOT", "LBRACKET", "RBRACKET", "MOD", "VAR", "NUM", 
                      "FNUM", "STRVAL", "WS" ]

    RULE_root = 0
    RULE_programa = 1
    RULE_bloque = 2
    RULE_statement = 3
    RULE_varint = 4
    RULE_asignacion = 5
    RULE_arraydecl = 6
    RULE_arrayasign = 7
    RULE_ifstm = 8
    RULE_whilestm = 9
    RULE_forstm = 10
    RULE_tipodato = 11
    RULE_parametro = 12
    RULE_parametros = 13
    RULE_funcion = 14
    RULE_returnstm = 15
    RULE_llamada = 16
    RULE_printstm = 17
    RULE_expr = 18
    RULE_logicalOr = 19
    RULE_logicalAnd = 20
    RULE_igualdad = 21
    RULE_comparacion = 22
    RULE_suma = 23
    RULE_producto = 24
    RULE_unario = 25
    RULE_primario = 26

    ruleNames =  [ "root", "programa", "bloque", "statement", "varint", 
                   "asignacion", "arraydecl", "arrayasign", "ifstm", "whilestm", 
                   "forstm", "tipodato", "parametro", "parametros", "funcion", 
                   "returnstm", "llamada", "printstm", "expr", "logicalOr", 
                   "logicalAnd", "igualdad", "comparacion", "suma", "producto", 
                   "unario", "primario" ]

    EOF = Token.EOF
    INI=1
    INILLAVE=2
    FIN=3
    IF=4
    ELSE=5
    WHILE=6
    FOR=7
    RETURN=8
    INT=9
    FLOAT=10
    STRING=11
    BOOL=12
    VOID=13
    TRUE=14
    FALSE=15
    PRINT=16
    COMMA=17
    PARENI=18
    PAREND=19
    SEMI=20
    ASSIGN=21
    SUM=22
    REST=23
    DIV=24
    MUL=25
    MAYORIGUAL=26
    MENORIGUAL=27
    MAYOR=28
    MENOR=29
    IGUAL=30
    NOIGUAL=31
    DIFF=32
    AND=33
    OR=34
    NOT=35
    LBRACKET=36
    RBRACKET=37
    MOD=38
    VAR=39
    NUM=40
    FNUM=41
    STRVAL=42
    WS=43

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gramatica_v3Parser.RULE_root

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ExprInputContext(RootContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v3Parser.RootContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(gramatica_v3Parser.ExprContext,0)

        def EOF(self):
            return self.getToken(gramatica_v3Parser.EOF, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprInput" ):
                return visitor.visitExprInput(self)
            else:
                return visitor.visitChildren(self)


    class ProgInputContext(RootContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v3Parser.RootContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def programa(self):
            return self.getTypedRuleContext(gramatica_v3Parser.ProgramaContext,0)

        def EOF(self):
            return self.getToken(gramatica_v3Parser.EOF, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgInput" ):
                return visitor.visitProgInput(self)
            else:
                return visitor.visitChildren(self)



    def root(self):

        localctx = gramatica_v3Parser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        try:
            self.state = 60
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14, 15, 18, 35, 39, 40, 41, 42]:
                localctx = gramatica_v3Parser.ExprInputContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 54
                self.expr()
                self.state = 55
                self.match(gramatica_v3Parser.EOF)
                pass
            elif token in [1]:
                localctx = gramatica_v3Parser.ProgInputContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 57
                self.programa()
                self.state = 58
                self.match(gramatica_v3Parser.EOF)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gramatica_v3Parser.RULE_programa

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ProgramaRuleContext(ProgramaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v3Parser.ProgramaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INI(self):
            return self.getToken(gramatica_v3Parser.INI, 0)
        def bloque(self):
            return self.getTypedRuleContext(gramatica_v3Parser.BloqueContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgramaRule" ):
                return visitor.visitProgramaRule(self)
            else:
                return visitor.visitChildren(self)



    def programa(self):

        localctx = gramatica_v3Parser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_programa)
        try:
            localctx = gramatica_v3Parser.ProgramaRuleContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(gramatica_v3Parser.INI)
            self.state = 63
            self.bloque()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloqueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INILLAVE(self):
            return self.getToken(gramatica_v3Parser.INILLAVE, 0)

        def FIN(self):
            return self.getToken(gramatica_v3Parser.FIN, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramatica_v3Parser.StatementContext)
            else:
                return self.getTypedRuleContext(gramatica_v3Parser.StatementContext,i)


        def getRuleIndex(self):
            return gramatica_v3Parser.RULE_bloque

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloque" ):
                return visitor.visitBloque(self)
            else:
                return visitor.visitChildren(self)




    def bloque(self):

        localctx = gramatica_v3Parser.BloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_bloque)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(gramatica_v3Parser.INILLAVE)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 549755895760) != 0):
                self.state = 66
                self.statement()
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 72
            self.match(gramatica_v3Parser.FIN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varint(self):
            return self.getTypedRuleContext(gramatica_v3Parser.VarintContext,0)


        def SEMI(self):
            return self.getToken(gramatica_v3Parser.SEMI, 0)

        def arraydecl(self):
            return self.getTypedRuleContext(gramatica_v3Parser.ArraydeclContext,0)


        def asignacion(self):
            return self.getTypedRuleContext(gramatica_v3Parser.AsignacionContext,0)


        def ifstm(self):
            return self.getTypedRuleContext(gramatica_v3Parser.IfstmContext,0)


        def whilestm(self):
            return self.getTypedRuleContext(gramatica_v3Parser.WhilestmContext,0)


        def forstm(self):
            return self.getTypedRuleContext(gramatica_v3Parser.ForstmContext,0)


        def returnstm(self):
            return self.getTypedRuleContext(gramatica_v3Parser.ReturnstmContext,0)


        def llamada(self):
            return self.getTypedRuleContext(gramatica_v3Parser.LlamadaContext,0)


        def printstm(self):
            return self.getTypedRuleContext(gramatica_v3Parser.PrintstmContext,0)


        def funcion(self):
            return self.getTypedRuleContext(gramatica_v3Parser.FuncionContext,0)


        def getRuleIndex(self):
            return gramatica_v3Parser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = gramatica_v3Parser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        try:
            self.state = 92
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 74
                self.varint()
                self.state = 75
                self.match(gramatica_v3Parser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                self.arraydecl()
                self.state = 78
                self.match(gramatica_v3Parser.SEMI)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 80
                self.asignacion()
                self.state = 81
                self.match(gramatica_v3Parser.SEMI)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 83
                self.ifstm()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 84
                self.whilestm()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 85
                self.forstm()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 86
                self.returnstm()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 87
                self.llamada()
                self.state = 88
                self.match(gramatica_v3Parser.SEMI)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 90
                self.printstm()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 91
                self.funcion()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(gramatica_v3Parser.VAR, 0)

        def INT(self):
            return self.getToken(gramatica_v3Parser.INT, 0)

        def FLOAT(self):
            return self.getToken(gramatica_v3Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(gramatica_v3Parser.STRING, 0)

        def BOOL(self):
            return self.getToken(gramatica_v3Parser.BOOL, 0)

        def ASSIGN(self):
            return self.getToken(gramatica_v3Parser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(gramatica_v3Parser.ExprContext,0)


        def getRuleIndex(self):
            return gramatica_v3Parser.RULE_varint

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarint" ):
                return visitor.visitVarint(self)
            else:
                return visitor.visitChildren(self)




    def varint(self):

        localctx = gramatica_v3Parser.VarintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varint)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 7680) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 95
            self.match(gramatica_v3Parser.VAR)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21:
                self.state = 96
                self.match(gramatica_v3Parser.ASSIGN)
                self.state = 97
                self.expr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(gramatica_v3Parser.VAR, 0)

        def ASSIGN(self):
            return self.getToken(gramatica_v3Parser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(gramatica_v3Parser.ExprContext,0)


        def getRuleIndex(self):
            return gramatica_v3Parser.RULE_asignacion

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignacion" ):
                return visitor.visitAsignacion(self)
            else:
                return visitor.visitChildren(self)




    def asignacion(self):

        localctx = gramatica_v3Parser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(gramatica_v3Parser.VAR)
            self.state = 101
            self.match(gramatica_v3Parser.ASSIGN)
            self.state = 102
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraydeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACKET(self):
            return self.getToken(gramatica_v3Parser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(gramatica_v3Parser.RBRACKET, 0)

        def VAR(self):
            return self.getToken(gramatica_v3Parser.VAR, 0)

        def INT(self):
            return self.getToken(gramatica_v3Parser.INT, 0)

        def FLOAT(self):
            return self.getToken(gramatica_v3Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(gramatica_v3Parser.STRING, 0)

        def BOOL(self):
            return self.getToken(gramatica_v3Parser.BOOL, 0)

        def ASSIGN(self):
            return self.getToken(gramatica_v3Parser.ASSIGN, 0)

        def INILLAVE(self):
            return self.getToken(gramatica_v3Parser.INILLAVE, 0)

        def FIN(self):
            return self.getToken(gramatica_v3Parser.FIN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramatica_v3Parser.ExprContext)
            else:
                return self.getTypedRuleContext(gramatica_v3Parser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(gramatica_v3Parser.COMMA)
            else:
                return self.getToken(gramatica_v3Parser.COMMA, i)

        def getRuleIndex(self):
            return gramatica_v3Parser.RULE_arraydecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArraydecl" ):
                return visitor.visitArraydecl(self)
            else:
                return visitor.visitChildren(self)




    def arraydecl(self):

        localctx = gramatica_v3Parser.ArraydeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arraydecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 7680) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 105
            self.match(gramatica_v3Parser.LBRACKET)
            self.state = 106
            self.match(gramatica_v3Parser.RBRACKET)
            self.state = 107
            self.match(gramatica_v3Parser.VAR)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21:
                self.state = 108
                self.match(gramatica_v3Parser.ASSIGN)
                self.state = 109
                self.match(gramatica_v3Parser.INILLAVE)
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 8280697257984) != 0):
                    self.state = 110
                    self.expr()
                    self.state = 115
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==17:
                        self.state = 111
                        self.match(gramatica_v3Parser.COMMA)
                        self.state = 112
                        self.expr()
                        self.state = 117
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 120
                self.match(gramatica_v3Parser.FIN)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayasignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(gramatica_v3Parser.VAR, 0)

        def LBRACKET(self):
            return self.getToken(gramatica_v3Parser.LBRACKET, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramatica_v3Parser.ExprContext)
            else:
                return self.getTypedRuleContext(gramatica_v3Parser.ExprContext,i)


        def RBRACKET(self):
            return self.getToken(gramatica_v3Parser.RBRACKET, 0)

        def ASSIGN(self):
            return self.getToken(gramatica_v3Parser.ASSIGN, 0)

        def getRuleIndex(self):
            return gramatica_v3Parser.RULE_arrayasign

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayasign" ):
                return visitor.visitArrayasign(self)
            else:
                return visitor.visitChildren(self)




    def arrayasign(self):

        localctx = gramatica_v3Parser.ArrayasignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_arrayasign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(gramatica_v3Parser.VAR)
            self.state = 124
            self.match(gramatica_v3Parser.LBRACKET)
            self.state = 125
            self.expr()
            self.state = 126
            self.match(gramatica_v3Parser.RBRACKET)
            self.state = 127
            self.match(gramatica_v3Parser.ASSIGN)
            self.state = 128
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfstmContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(gramatica_v3Parser.IF, 0)

        def PARENI(self):
            return self.getToken(gramatica_v3Parser.PARENI, 0)

        def expr(self):
            return self.getTypedRuleContext(gramatica_v3Parser.ExprContext,0)


        def PAREND(self):
            return self.getToken(gramatica_v3Parser.PAREND, 0)

        def bloque(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramatica_v3Parser.BloqueContext)
            else:
                return self.getTypedRuleContext(gramatica_v3Parser.BloqueContext,i)


        def ELSE(self):
            return self.getToken(gramatica_v3Parser.ELSE, 0)

        def getRuleIndex(self):
            return gramatica_v3Parser.RULE_ifstm

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfstm" ):
                return visitor.visitIfstm(self)
            else:
                return visitor.visitChildren(self)




    def ifstm(self):

        localctx = gramatica_v3Parser.IfstmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_ifstm)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(gramatica_v3Parser.IF)
            self.state = 131
            self.match(gramatica_v3Parser.PARENI)
            self.state = 132
            self.expr()
            self.state = 133
            self.match(gramatica_v3Parser.PAREND)
            self.state = 134
            self.bloque()
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 135
                self.match(gramatica_v3Parser.ELSE)
                self.state = 136
                self.bloque()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhilestmContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(gramatica_v3Parser.WHILE, 0)

        def PARENI(self):
            return self.getToken(gramatica_v3Parser.PARENI, 0)

        def expr(self):
            return self.getTypedRuleContext(gramatica_v3Parser.ExprContext,0)


        def PAREND(self):
            return self.getToken(gramatica_v3Parser.PAREND, 0)

        def bloque(self):
            return self.getTypedRuleContext(gramatica_v3Parser.BloqueContext,0)


        def getRuleIndex(self):
            return gramatica_v3Parser.RULE_whilestm

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhilestm" ):
                return visitor.visitWhilestm(self)
            else:
                return visitor.visitChildren(self)




    def whilestm(self):

        localctx = gramatica_v3Parser.WhilestmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_whilestm)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(gramatica_v3Parser.WHILE)
            self.state = 140
            self.match(gramatica_v3Parser.PARENI)
            self.state = 141
            self.expr()
            self.state = 142
            self.match(gramatica_v3Parser.PAREND)
            self.state = 143
            self.bloque()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForstmContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(gramatica_v3Parser.FOR, 0)

        def PARENI(self):
            return self.getToken(gramatica_v3Parser.PARENI, 0)

        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(gramatica_v3Parser.SEMI)
            else:
                return self.getToken(gramatica_v3Parser.SEMI, i)

        def expr(self):
            return self.getTypedRuleContext(gramatica_v3Parser.ExprContext,0)


        def asignacion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramatica_v3Parser.AsignacionContext)
            else:
                return self.getTypedRuleContext(gramatica_v3Parser.AsignacionContext,i)


        def PAREND(self):
            return self.getToken(gramatica_v3Parser.PAREND, 0)

        def bloque(self):
            return self.getTypedRuleContext(gramatica_v3Parser.BloqueContext,0)


        def varint(self):
            return self.getTypedRuleContext(gramatica_v3Parser.VarintContext,0)


        def getRuleIndex(self):
            return gramatica_v3Parser.RULE_forstm

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForstm" ):
                return visitor.visitForstm(self)
            else:
                return visitor.visitChildren(self)




    def forstm(self):

        localctx = gramatica_v3Parser.ForstmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_forstm)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(gramatica_v3Parser.FOR)
            self.state = 146
            self.match(gramatica_v3Parser.PARENI)
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9, 10, 11, 12]:
                self.state = 147
                self.varint()
                pass
            elif token in [39]:
                self.state = 148
                self.asignacion()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 151
            self.match(gramatica_v3Parser.SEMI)
            self.state = 152
            self.expr()
            self.state = 153
            self.match(gramatica_v3Parser.SEMI)
            self.state = 154
            self.asignacion()
            self.state = 155
            self.match(gramatica_v3Parser.PAREND)
            self.state = 156
            self.bloque()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipodatoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(gramatica_v3Parser.INT, 0)

        def FLOAT(self):
            return self.getToken(gramatica_v3Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(gramatica_v3Parser.STRING, 0)

        def BOOL(self):
            return self.getToken(gramatica_v3Parser.BOOL, 0)

        def VOID(self):
            return self.getToken(gramatica_v3Parser.VOID, 0)

        def getRuleIndex(self):
            return gramatica_v3Parser.RULE_tipodato

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipodato" ):
                return visitor.visitTipodato(self)
            else:
                return visitor.visitChildren(self)




    def tipodato(self):

        localctx = gramatica_v3Parser.TipodatoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_tipodato)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 15872) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametroContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipodato(self):
            return self.getTypedRuleContext(gramatica_v3Parser.TipodatoContext,0)


        def VAR(self):
            return self.getToken(gramatica_v3Parser.VAR, 0)

        def getRuleIndex(self):
            return gramatica_v3Parser.RULE_parametro
